# r3

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup-msvc.bat  vcpkg.json
source/core/: CMakeLists.txt  file_io.cpp  file_io.h  glm_headers.h  job_pool.cpp  job_pool.h  log.h  mutex.cpp  mutex.h  platform.cpp  platform.h  profiler.h  random.cpp  random.h  run_external_process.cpp  run_external_process.h  semaphore.cpp  semaphore.h  thread_pool.cpp  thread_pool.h  time.cpp  time.h
source/dungeons_of_arrrgh/: CMakeLists.txt  base_actor_stats_component.cpp  base_actor_stats_component.h  blocks_tile_component.cpp  blocks_tile_component.h  consumable_item_component.cpp  consumable_item_component.h  dungeons_of_arrrgh.cpp  dungeons_of_arrrgh.h  equipped_items_component.cpp  equipped_items_component.h  inspectable_component.cpp  inspectable_component.h  inventory_component.cpp  inventory_component.h  item_component.cpp  item_component.h  item_stats_component.cpp  item_stats_component.h  monster_component.cpp  monster_component.h  monster_spawn_component.cpp  monster_spawn_component.h  vision_component.cpp  vision_component.h  wearable_item_component.cpp  wearable_item_component.h  world_grid_component.cpp  world_grid_component.h  world_grid_position.cpp  world_grid_position.h
source/editor/: CMakeLists.txt  editor_command.h  editor_command_list.cpp  editor_command_list.h  editor_utils.cpp  editor_utils.h  editor_window.h  undo_redo_value_inspector.cpp  undo_redo_value_inspector.h  world_editor_move_entities_tool.cpp  world_editor_move_entities_tool.h  world_editor_select_entity_tool.cpp  world_editor_select_entity_tool.h  world_editor_tool.h  world_editor_transform_widget.cpp  world_editor_transform_widget.h  world_editor_window.cpp  world_editor_window.h  world_info_widget.cpp  world_info_widget.h  world_runner_window.cpp  world_runner_window.h
source/editor/commands/: set_value_cmd.h  world_editor_add_component_cmd.cpp  world_editor_add_component_cmd.h  world_editor_add_empty_entity_cmd.cpp  world_editor_add_empty_entity_cmd.h  world_editor_add_entity_from_mesh_cmd.cpp  world_editor_add_entity_from_mesh_cmd.h  world_editor_add_mesh_material_override_cmd.cpp  world_editor_add_mesh_material_override_cmd.h  world_editor_clone_entities_cmd.cpp  world_editor_clone_entities_cmd.h  world_editor_convert_mesh_components_cmd.cpp  world_editor_convert_mesh_components_cmd.h  world_editor_delete_component_cmd.cpp  world_editor_delete_component_cmd.h  world_editor_delete_entities_cmd.cpp  world_editor_delete_entities_cmd.h  world_editor_import_scene_cmd.cpp  world_editor_import_scene_cmd.h  world_editor_save_cmd.cpp  world_editor_save_cmd.h  world_editor_select_entities_cmd.cpp  world_editor_select_entities_cmd.h  world_editor_set_entity_parent_cmd.cpp  world_editor_set_entity_parent_cmd.h  world_editor_set_entity_positions_cmd.cpp  world_editor_set_entity_positions_cmd.h
source/editor/systems/: editor_system.cpp  editor_system.h
source/engine/: CMakeLists.txt  asset_file.cpp  asset_file.h  async.cpp  async.h  basic_value_inspector.cpp  basic_value_inspector.h  blackboard.cpp  blackboard.h  callback_array.h  console_log_widget.cpp  dda.h  dda.inl  dds_loader.cpp  dds_loader.h  deferred_lighting_compute.cpp  deferred_lighting_compute.h  engine_startup.cpp  engine_startup.h  entity_inspector_widget.cpp  entity_inspector_widget.h  entity_list_widget.cpp  entity_list_widget.h  file_dialogs.cpp  file_dialogs.h  flycam.cpp  flycam.h  frame_graph.cpp  frame_graph.h  frustum.cpp  imgui_menubar_helper.cpp  imgui_menubar_helper.h  intersection_tests.cpp  intersection_tests.h  loaded_model.cpp  loaded_model.h  model_data.cpp  model_data.h  model_data_handle.cpp  model_data_handle.h  (+18 more)
source/engine/assets/: asset_file.cpp  asset_file.h  dds_loader.cpp  model_data.cpp  model_data.h  textures.cpp
source/engine/components/: camera.cpp  camera.h  environment_settings.cpp  environment_settings.h  lua_script.cpp  lua_script.h  point_light.cpp  point_light.h  spot_light.cpp  spot_light.h  static_mesh.cpp  static_mesh.h  static_mesh_materials.cpp  static_mesh_materials.h  transform.cpp  transform.h
source/engine/graphics/: deferred_lighting_compute.cpp  deferred_lighting_compute.h  depth_texture_visualiser.cpp  depth_texture_visualiser.h  flycam.cpp  flycam.h  simple_tiled_lights_compute.cpp  simple_tiled_lights_compute.h  static_mesh_instance_culling_compute.cpp  static_mesh_instance_culling_compute.h  tonemap_compute.cpp
source/engine/systems/: camera_system.cpp  camera_system.h  event_system.cpp  event_system.h  frame_scheduler_system.cpp  frame_scheduler_system.h  imgui_system.cpp  imgui_system.h  immediate_render_system.cpp  immediate_render_system.h  input_system.cpp  input_system.h  job_system.cpp  job_system.h  lights_system.cpp  lights_system.h  lua_system.cpp  lua_system.h  mesh_renderer.cpp  mesh_renderer.h  model_data_system.cpp  model_data_system.h  render_stats.cpp  render_stats.h  (+12 more)
source/entities/: CMakeLists.txt  component_helpers.h  component_storage.cpp  component_storage.h  component_type_registry.cpp  component_type_registry.h  entity_component_lookup.h  entity_component_lookup.inl  entity_handle.cpp  entity_handle.h  queries.h  queries.inl  world.cpp  world.h
source/main/: CMakeLists.txt  main.cpp
source/render/: CMakeLists.txt  buffer_pool.cpp  buffer_pool.h  camera.h  camera.inl  command_buffer_allocator.cpp  command_buffer_allocator.h  deletion_queue.cpp  deletion_queue.h  descriptors.cpp  descriptors.h  device.cpp  device.h  immediate_renderer.cpp  immediate_renderer.h  linear_write_gpu_buffer.cpp  linear_write_gpu_buffer.h  pipeline_builder.cpp  pipeline_builder.h  render_graph.cpp  render_graph.h  render_helpers.cpp  render_helpers.h  render_pass_context.cpp  render_pass_context.h  render_system.cpp  render_system.h  render_target_cache.cpp  render_target_cache.h  swap_chain.cpp  swap_chain.h  timestamp_queries_handler.cpp  timestamp_queries_handler.h  vulkan_helpers.cpp  vulkan_helpers.h  window.cpp  window.h  writeonly_gpu_buffer.cpp  writeonly_gpu_buffer.h
(+138 files in other folders)
