set(EngineLib_SourceFiles
	assets/asset_file.h
	assets/asset_file.cpp
	assets/textures.h
	assets/textures.cpp
	assets/model_data.h
	assets/model_data.cpp
	assets/dds_loader.h
	assets/dds_loader.cpp
	graphics/depth_texture_visualiser.h
	graphics/depth_texture_visualiser.cpp
	graphics/static_mesh_instance_culling_compute.h
	graphics/static_mesh_instance_culling_compute.cpp
	graphics/tonemap_compute.h
	graphics/tonemap_compute.cpp
	graphics/deferred_lighting_compute.h
	graphics/deferred_lighting_compute.cpp
	graphics/simple_tiled_lights_compute.h
	graphics/simple_tiled_lights_compute.cpp
	graphics/flycam.h
	graphics/flycam.cpp
	ui/console_log_widget.h
	ui/console_log_widget.cpp
	ui/entity_list_widget.h
	ui/entity_list_widget.cpp
	ui/imgui_menubar_helper.h
	ui/imgui_menubar_helper.cpp
	ui/value_inspector.h
	ui/reactive_value_inspector.h
	ui/reactive_value_inspector.cpp
	ui/entity_inspector_widget.h
	ui/entity_inspector_widget.cpp
	ui/basic_value_inspector.h
	ui/basic_value_inspector.cpp
	ui/file_dialogs.h
	ui/file_dialogs.cpp
	utils/tag.h
	utils/tag.cpp
	utils/tag_set.h
	utils/dda.h
	utils/dda.inl
	utils/blackboard.h
	utils/blackboard.cpp
	utils/intersection_tests.h
	utils/intersection_tests.cpp
	utils/async.h
	utils/async.cpp
	utils/frustum.h
	utils/frustum.cpp
	frame_graph.h
	frame_graph.cpp
	engine_startup.h
	engine_startup.cpp
	systems.h
	systems.cpp
	serialiser.h
	serialiser.cpp
	register_engine_components.h
	register_engine_components.cpp
	systems/render_stats.h
	systems/render_stats.cpp
	systems/immediate_render_system.h
	systems/immediate_render_system.cpp
	systems/frame_scheduler_system.h
	systems/frame_scheduler_system.cpp
	systems/texture_system.h
	systems/texture_system.cpp
	systems/time_system.h
	systems/time_system.cpp
	systems/event_system.h
	systems/event_system.cpp
	systems/input_system.h
	systems/input_system.cpp
	systems/imgui_system.h
	systems/imgui_system.cpp
	systems/camera_system.h
	systems/camera_system.cpp
	systems/job_system.h
	systems/job_system.cpp
	systems/model_data_system.h
	systems/model_data_system.cpp
	systems/static_mesh_system.h
	systems/static_mesh_system.cpp
	systems/mesh_renderer.h
	systems/mesh_renderer.cpp
	systems/lights_system.h
	systems/lights_system.cpp
	systems/lua_system.h
	systems/lua_system.cpp
	systems/transform_system.h
	systems/transform_system.cpp
	components/spot_light.h
	components/spot_light.cpp
	components/point_light.h
	components/point_light.cpp
	components/environment_settings.h
	components/environment_settings.cpp
	components/transform.h
	components/transform.cpp
	components/camera.h
	components/camera.cpp
	components/static_mesh.h
	components/static_mesh.cpp
	components/static_mesh_materials.h
	components/static_mesh_materials.cpp
	components/lua_script.h
	components/lua_script.cpp
)

add_library(Engine ${EngineLib_SourceFiles})
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR}/../ FILES ${EngineLib_SourceFiles})
target_include_directories(Engine PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../)
target_include_directories(Engine PRIVATE ${Vulkan_INCLUDE_DIRS})
target_link_libraries(Engine PRIVATE Core Optick::OptickCore SDL2::SDL2 glm::glm assimp::assimp imgui::imgui nfd::nfd ${LUA_LIBRARIES} meshoptimizer::meshoptimizer GPUOpen::VulkanMemoryAllocator)